argocd/TraningLicenseSharing/Frontend/ArgoCD.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: 200-499
    # nginx.ingress.kubernetes.io/whitelist-source-range: 193.33.93.43/32
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: cert-manager-global
    external-dns.alpha.kubernetes.io/hostname: tls-fe.app.mddinternship.com
  labels:
    app: tls-fe
  name: tls-fe-ingres
spec:
  rules:
    - host: tls-fe.app.mddinternship.com
      http:
        paths:
          - backend:
              service:
                name: tls-fe-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tls-fe.app.mddinternship.com
      secretName: tls-fe-tls
---
apiVersion: v1
kind: Service
metadata:
  name: tls-fe-service
spec:
  selector:
    #app.kubernetes.io/name: tls-be
    app: tls-fe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-fe
  labels:
    app: tls-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-fe
  template:
    metadata:
      labels:
        app: tls-fe
    spec:
      containers:
        - name: bsfrontend
          image: nexus.tool.mddinternship.com/repository/tls-frontend:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: nexus-docker
